ingress/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/rewrite-target: /$1$2
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   rewrite ^/argocd(/|$)(.*) /$2 break;
spec:
  ingressClassName: nginx
  rules:
  - host: momofamily.tplinkdns.com
    http:
      paths:
      - path: /argocd(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - momofamily.tplinkdns.com
    secretName: argocd-server-tls # as expected by argocd-server
